# artefact1

./: Cargo.toml  LICENSE  README.md  flake.nix  repro.scm  rust-toolchain.toml
crates/cryptovampire/: Cargo.toml
crates/cryptovampire/src/formula/: variable.rs
crates/cryptovampire/src/formula/formula/: mod.rs
crates/cryptovampire/src/formula/function/: function.rs
crates/cryptovampire/src/smt/: smt.rs
crates/cryptovampire/src/smt/smt/: display.rs
crates/cryptovampire_macros/: Cargo.toml
crates/cryptovampire_macros/src/: indistinguishability.rs
crates/cryptovampire_macros/src/formulas/: foexpr.rs  parser.rs  smt.rs
crates/cryptovampire_smt/: Cargo.toml
crates/cryptovampire_smt/assets/reserved_keywords/: smt.txt  vampire.txt
crates/cryptovampire_smt/src/: formula.rs  lib.rs  smt.rs  solvers.rs
crates/cryptovampire_smt/src/formatter/: translation.rs
crates/egg/: README.md
crates/egg/src/: dot.rs  egraph.rs  explain.rs  lib.rs  multipattern.rs  pattern.rs  rewrite.rs  subst.rs
crates/egg/src/tutorials/: _01_background.rs
crates/egg/tests/: lambda.rs
crates/golgge/: Cargo.toml
crates/golgge/src/: program.rs  simplify_and.rs
crates/golgge/src/rule/: prolog.rs
crates/indistinguishability/: Cargo.toml
crates/indistinguishability/scheme/libs/: cryptography.scm  formula.scm  function.scm  protocol.scm  signature.scm  solver.scm  sort.scm  stdlib.scm  type.scm
crates/indistinguishability/src/: configuration.rs  lib.rs  main.rs
crates/indistinguishability/src/input/: golgge_rules.rs  mod.rs  shared_cryptography.rs  shared_exists.rs  shared_problem.rs
crates/indistinguishability/src/libraries/: find_indices.rs  libraries.rs  library.rs  mod.rs  sanity_check.rs
crates/indistinguishability/src/libraries/and_bounder/: mod.rs
crates/indistinguishability/src/libraries/base/: mod.rs
crates/indistinguishability/src/libraries/cryptography/: mod.rs
crates/indistinguishability/src/libraries/cryptography/aenc/: candidate.rs  enc_kp.rs  ind_cca.rs  mod.rs  subst.rs
crates/indistinguishability/src/libraries/cryptography/aenc/search/: dynamic.rs  mod.rs  prolog_rules.rs
crates/indistinguishability/src/libraries/cryptography/ddh/: candidate.rs  mod.rs  rule.rs  subst.rs
crates/indistinguishability/src/libraries/cryptography/ddh/search/: dynamic.rs  mod.rs  prolog_rules.rs
crates/indistinguishability/src/libraries/cryptography/prf/: candidate.rs  mod.rs  search.rs  substitute.rs  test.rs
crates/indistinguishability/src/libraries/cryptography/xor/: mod.rs
crates/indistinguishability/src/libraries/current_step/: mod.rs
crates/indistinguishability/src/libraries/deduce/: mod.rs  nonce.rs  quantifier.rs  regular.rs  static_rules.rs
crates/indistinguishability/src/libraries/fa/: mod.rs  split.rs
crates/indistinguishability/src/libraries/ifs/: mod.rs
crates/indistinguishability/src/libraries/lambda/: mod.rs
crates/indistinguishability/src/libraries/memory_cells/: mod.rs
crates/indistinguishability/src/libraries/nonce/: deduce_fresh.rs  mod.rs  searcher.rs  smt_no_guessing.rs
crates/indistinguishability/src/libraries/problem/: mod.rs
crates/indistinguishability/src/libraries/protocol/: constrains.rs  mod.rs  publication.rs  unfold.rs
crates/indistinguishability/src/libraries/smt/: mod.rs
crates/indistinguishability/src/libraries/substitution/: from_proof.rs  mod.rs  rule.rs
crates/indistinguishability/src/libraries/utils/: formula_builder.rs  mod.rs  sinks.rs  subterm_trait.rs  with_data.rs
crates/indistinguishability/src/libraries/vampire/: mod.rs
crates/indistinguishability/src/problem/: analysis.rs  checkpoint.rs  cryptography.rs  formulas.rs  functions.rs  mod.rs  protocol.rs  publish.rs  report.rs  run.rs  state.rs
crates/indistinguishability/src/problem/cache/: mod.rs  smt.rs
crates/indistinguishability/src/protocol/: memory_cell.rs  mod.rs  protocol.rs  step.rs
crates/indistinguishability/src/protocol/call_graph/: graph.rs  mod.rs
crates/indistinguishability/src/runners/: cvc5.rs  file_builder.rs  mod.rs  runner_spliter.rs  vampire.rs  z3.rs
crates/indistinguishability/src/terms/: alias.rs  builtin.rs  flags.rs  function.rs  functions_holder.rs  mod.rs  rewrite.rs  signature.rs  sort.rs  variable.rs
crates/indistinguishability/src/terms/formula/: base.rs  builders.rs  checking.rs  conversion.rs  mod.rs  smt.rs  steel.rs
crates/indistinguishability/src/terms/formula/manipulation/: mod.rs  opmisations.rs
crates/indistinguishability/src/terms/quantifier/: exists.rs  find.rs
crates/indistinguishability/src/terms/utils/: mod.rs  pull_from_egraph.rs  rexp_macro.rs
crates/indistinguishability/src/utils/: static_rc.rs
crates/indistinguishability/tests/: intergration_test.rs  save-results.scm
crates/indistinguishability/tests/passing/: .gitignore  DYNAMIC_CORES.md  MAX_SMT_TRACKING.md  Makefile  README.md  SOLVER_TESTING.md  basic-hash.scm  ddh-P.scm  ddh-S.scm  ddh-compo-auth.scm  ddh-compo-secret.scm  feldhofer.scm  hash-lock.scm  lak-tag.scm  moldvampire.sh  mw.scm  private-auth.scm  ssh-forward-part1-auth.scm  ssh-forward-part1-secret.scm  ssh-forward-part2-auth.scm  ssh-forward-part2-secret.scm  test-solvers-parallel.py
crates/indistinguishability/tests/passing/stateful/: lfmtp.scm  memory-cell-simple.scm  toy-state-equiv.scm  yubihsm.scm
crates/logic_formula/: Cargo.toml
crates/logic_formula/src/: iterators.rs
crates/quarck/: Cargo.toml
crates/quarck/src/: lib.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs  powerset.rs  reservable.rs  sliceidx.rs  transposer.rs  utils.rs
experimental/: README.md
experimental/indistinguishability/: ddh-compo.scm
experimental/squirrel-examples/: signed-ddh-compo.sp
nix/: commun.nix  fmt.nix
