[workspace]
members = [
  "crates/cryptovampire",
  "crates/utils",
  "crates/logic_formula",
  "crates/cryptovampire_macros",
  "crates/indistinguishability",
  "crates/golgge",
  "crates/cryptovampire_smt",
  "crates/quarck"
]
resolver = "2"
default-members = ["crates/indistinguishability"]

[workspace.dependencies]
rustc-hash = "2.1.0"     
itertools = "0.14"
if_chain = "1.0"
hashbrown = "0.16"
log = { version = "0.4", features = ["release_max_level_warn"] }
static_init = "1.0"
paste = "1"
thiserror = "2"
macro-attr = "0.2"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
derive_builder = "0.20"
bitflags = "2"
smallvec = {version = "1", features = ["union", "const_generics", "serde", "const_new"]}
env_logger = "0.11"
tempfile = "3"
which = "8.0"
bon = "3.6"
clap = { version = "4", features = ["derive"] }
clap_complete = "4.5"
parking_lot = "0.12"
steel-core = { git = "https://github.com/puyral/steel/", branch = "better-macros", features = ["custom-hash"]}
steel-derive = { git = "https://github.com/puyral/steel/", branch = "better-macros"}
steel-repl = { git = "https://github.com/puyral/steel/", branch = "better-macros"}
# steel-core = { version = "0.8.2", features = ["custom-hash"]}
# steel-derive = { version = "0.8.2"}
# steel-repl = { version = "0.8.2"}

[workspace.lints.rust]
elided_lifetimes_in_paths = "deny"
unused_imports = "allow"

[profile.profiling]
inherits = "release"
debug = true

[profile.debug-optimized]
inherits = "dev"  # Inherits from the default dev profile
opt-level = 3    # Enables full optimizations
debug = true     # Includes debug symbols
debug-assertions = true  # Enables debug assertions
overflow-checks = true    # Enables overflow checks