[package]
name = "cryptovampire"
version = "0.5.1"
edition = "2021"
authors = ["Simon Jeanteur <simon.jeanteur@tuwien.ac.at>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true


[dependencies]
utils = { path = "../utils", features = ["serde"] }
logic_formula = {path = "../logic_formula", features = ["serde"]}
cryptovampire_macros = {path = "../cryptovampire_macros"}
cryptovampire_smt = {path = "../cryptovampire_smt", features = ["cryptovampire"]}
quarck = { path = "../quarck" }

itertools = { workspace = true }
if_chain = { workspace = true }
hashbrown = { workspace = true }
static_init = { workspace = true }
paste = { workspace = true }
macro-attr ={ workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"]}
derive_builder = { workspace = true }
bitflags = { workspace = true }
log.workspace = true
env_logger.workspace = true
tempfile.workspace = true
which.workspace = true
clap = { workspace= true, features = ["derive"] }
clap_complete.workspace = true

pest = "2.7"
pest_derive = "2.7"
derivative = { version = "2.2" }
const_format = "0.2"
serde_json = "1.0.120"
base64 = "0.22.1"
tptp = "0.31"
regex = "1.10"
shared_child = "1.0.0"
once_cell = "1.19.0"
nom = "7"

[dev-dependencies]
serde_path_to_error = "0.1"

