[package]
name = "cryptovampire_macros"
version = "0.1.0"
edition = "2024"
authors = ["GeoSansLightBold"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
utils = {path = "../utils"}

itertools.workspace = true

syn = {version = "2.0", features = ["full", "extra-traits"]}
quote = "1.0"
proc-macro2 = "1.0"