[package]
name = "cryptovampire_smt"
version = "0.1.0"
edition = "2024"
authors = ["GeoSansLightBold"]

[lints]
workspace = true

[dependencies]
utils = { path = "../utils"}
logic_formula = {path = "../logic_formula"}
quarck = {path = "../quarck"}
cryptovampire_macros = {path = "../cryptovampire_macros", optional = true}

log.workspace = true
env_logger.workspace = true
itertools.workspace = true
serde = { workspace = true, optional = true}
rustc-hash.workspace = true
bitflags.workspace = true
static_init.workspace = true
thiserror.workspace = true

regex = {version = "1.11.1", optional = true}

[features]
serde = ["utils/serde", "dep:serde"]
cryptovampire = ["vampire"]
vampire = []
macro = ["dep:cryptovampire_macros"]
smt-parsing = ["dep:regex"]

[dev-dependencies]
cryptovampire_macros = {path = "../cryptovampire_macros"}
