[package]
name = "golgge"
version = "0.1.0"
edition = "2024"
authors = ["GeoSansLightBold"]

[dependencies]
serde_json = "1.0.120"
tempfile = "3.10"
colored = "3.0.0"

# own crates
utils = { path = "../utils" }
logic_formula = { path = "../logic_formula" }
egg = { path = "../egg", features = ["serde-1", "cryptovampire"] }

# workspace
itertools.workspace = true
static_init.workspace = true
paste.workspace = true
anyhow.workspace = true
smallvec.workspace = true
log.workspace = true
env_logger.workspace = true
serde.workspace = true
bon.workspace = true
thiserror.workspace = true
bitflags = { workspace = true, features = ["serde"] }
rustc-hash.workspace = true
steel-core = { workspace = true, optional = true }
steel-derive = { workspace = true, optional = true }
steel-repl = { workspace = true, optional = true }

[features]
sync = []
default = ["sync"]
steel = ["steel-core", "steel-derive", "steel-repl"]

[lints]
workspace = true
