[package]
name = "indistinguishability"
version = "0.2.0"
edition = "2024"

[dependencies]

# own crates
utils = { path = "../utils", features = ["serde"] }
logic_formula = { path = "../logic_formula", features = ["serde"] }
egg = { path = "../egg", features = ["serde-1", "cryptovampire"] }
golgge = { path = "../golgge", features = ["steel"]}
cryptovampire_macros = { path = "../cryptovampire_macros" }
cryptovampire_smt = { path = "../cryptovampire_smt", features = [
  "vampire",
  "macro",
] }
quarck = { path = "../quarck", features = ["serde"] }

# workspace
itertools.workspace = true
static_init.workspace = true
paste.workspace = true
anyhow.workspace = true
smallvec = { workspace = true, features = ["serde", "union", "const_generics"] }
log.workspace = true
env_logger.workspace = true
serde.workspace = true
bitflags = { workspace = true, features = ["serde"] }
tempfile.workspace = true
which.workspace = true
bon.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
clap_complete.workspace = true
thiserror = { workspace = true }
rustc-hash.workspace = true
parking_lot.workspace = true
steel-core.workspace = true
steel-derive.workspace = true
steel-repl.workspace = true


# bumpalo = "3.20"
rpds = "1.1.1"
imbl = "7"
archery = "1.2"
indexmap = "2.7.0"
serde_json = "1.0.120"
num_cpus = "1.17.0"
seq-macro = "0.3.6"
humantime = "2.3.0"
tokio = { version = "1", features = ["full"] }

[patch.crates-io]
lasso = { git = "https://github.com/lcnr/lasso/", branch = "patch-1" }

[features]
verbose = []

[lints]
workspace = true


[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"