[package]
name = "logic_formula"
version = "0.1.0"
edition = "2021"
authors = ["GeoSansLightBold"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true


[dependencies]
utils = { path = "../utils" }
egg = { path = "../egg", optional = true }

serde = { workspace = true, optional = true }
smallvec = {workspace = true, optional = true, features = ["const_new"]}
itertools.workspace = true
thiserror.workspace = true

[features]
egg = ["dep:egg", "smallvec"]
serde = ["dep:serde", "smallvec?/serde", "egg?/serde-1", "utils/serde"]