[package]
name = "quarck"
version = "0.1.0"
edition = "2024"
authors = ["GeoSansLightBold"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
serde = { workspace = true, optional = true }

[features]
serde = ["dep:serde"]