[package]
name = "utils"
version = "0.2.0"
edition = "2021"
authors = ["GeoSansLightBold"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = { workspace = true }
thiserror = { workspace = true }
if_chain = { workspace = true }
itertools = { workspace = true }

serde = {workspace = true, optional = true}